--- a/cold/basic.css
+++ b/cold/basic.css
@@ -3,7 +3,6 @@ body {
 
 }
 
-/* CSS styles for the layout */
 .span2 {
     grid-column: span 2;
 }
@@ -41,8 +40,8 @@ body {
     cursor: pointer;
     text-align: center;
     display: flex;
-    flex-direction: column; /* Display title and image in a column */
-    align-items: center; /* Center items horizontally */
+    flex-direction: column; 
+    align-items: center; 
     height: fit-content;
 }
 
@@ -53,18 +52,17 @@ body {
 .med-box img {
     max-width: 100%;
     height: auto;
-    max-height: 100px; /* Limit the maximum height */
+    max-height: 100px; 
 }
 
 #selectedMedsDetails {
     padding: 20px;
- /*   border: 1px solid #ccc;  */
     margin-bottom: 20px;
 }
 
 .med-title {
-font-size: 1.2em; /* Adjust the font size as needed */
-font-weight: bold; /* Make the font bold */
+font-size: 1.2em; 
+font-weight: bold;
 }
 
 .selected-med-details {
@@ -75,5 +73,5 @@ margin-left: 20px;
 }
 
 .selected {
-    background-color: #b8ffc8; /* Change to whatever color you prefer */
+    background-color: #b8ffc8; 
 }
